lynn APR 2024 updates

--- a/about.html
+++ b/about.html
@@ -83,18 +83,20 @@ $('footer').next('div').remove();
    <img src="img/lynn2020.jpg" width="260px" />
    <div id="blob"></div>
         <div id="content">
-<p>
-Lynn Steigleder was born in Richmond, Virginia. He spent most of his adult life as a supervisor in the field of construction and fabrication. In 2006, Lynn received a diagnosis of multiple sclerosis. Lynn realized the need to transition into a new career path due to his energy and mobility challenges.
+        <h1>7/24/59 — 4/9/24</h1>
+            <p>
+    Lynn Steigleder was born in Richmond, Virginia. He spent most of his adult life as a construction and fabrication supervisor. In 2006, Lynn received a diagnosis of multiple sclerosis. Due to his energy and mobility challenges, Lynn realized the need to transition into a new career path.
 </p>
 <p>
-His son suggested he consider writing as a career; having enjoyed his father’s short stories. Lynn agreed to the challenge and his first novel “Rising Tide” in the series, of the same name was released for publication in 2009. The second “Eden’s Wake” and the third “Deadly Reign” soon followed. “Terminal Core”, a standalone was released in 2016. "Dalon Con"  (The Essence of Time) is coming soon and should be released this year and a fourth book for the "Rising Tide" series is nearing completion.
+    His son suggested he consider writing as a career, having enjoyed his father’s short stories. Lynn agreed to the challenge, and his first novel, “Rising Tide,” in the series of the same name, was released for publication in 2009. The second “Eden’s Wake” and the third “Deadly Reign” soon followed. “Terminal Core”, a standalone was released in 2016.
 </p>
 <p>
-Lynn writes science fiction, fantasy, action-adventure, and Christian fiction.
-</p>
+    Lynn loved to write about daily events, things he saw in nature, or ideas evolving from any path his imagination took him. He enjoyed the challenges of bringing a novel from conception, working with his publisher through the editing process, completing the many rewrites necessary for the final draft, and reading the book multiple times before taking it to print.  His passion for writing was science fiction, fantasy, action-adventure, and Christian fiction because his imagination had no limits.
+</p>  
 <p>
-Lynn’s ideas are often driven by daily events, things he sees in nature or any path his imagination decides to lead him down. He loves to write and enjoys the challenges of bringing a novel from conception, working with his publisher through the editing process, rewrites and reading the book many times before it goes to print.
-</p>
+    Lynn died of cardiac and respiratory failure on April 9, 2024. At the time of his passing, he had two books ready for release: <a href="https://www.amazon.com/Dalon-Essence-Time-Lynn-Steigleder-ebook/dp/B0D3GMS77M">“Dalon Con” (The Essence of Time)</a> and his first and only Children’s Book, <a href="1945146575?crid=38PPWFPYU8P7O">“Papa N’ Lil’ Ed,”</a> written for his grandson, Eli. Both books are available for preorder now on Amazon and will be available for purchase on July 15, 2024.
+</p> 
+     </p>
         </div>
     </section>
 <div class="clear"></div>
