--- a/index.html
+++ b/index.html
@@ -1,148 +1,191 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta charset="utf-8">
-	<title>Lynn Steigleder</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+  <head>
+    <meta charset="utf-8" />
+    <title>Lynn Steigleder</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
+	  </head>
+  <body>
+    <header>
+      <div id="wrap">
+        <hgroup id="logo">
+			<a href="index.html">
+				<h1>Lynn Steigleder</h1>
+				<h2>Author</h2>
+				<h3>sci-fi + fantasy + action adventure</h3>
+			</a>
+	</hgroup>
+        <nav>
+          <ul>
+            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a href="http://authorrisingtide.wordpress.com/" target="_blank"
+                >Blog</a
+              >
+            </li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="books.html">Books</a></li>
+            <li><a href="about.html">The Author</a></li>
+          </ul>
+        </nav>
+        <!-- <a href="message.html" style="color:#e4a03a; position:absolute; font-size:14px; top:40px; right:0; ">Click here to read a personal message from Lynn</>a -->
 
-<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/37d67eb970c9bfe07113371a0/d8c7e17900804ceeae10bd271.js");</script>
+        <div id="social">
+          <ul>
+            <li>
+              <a
+                class="fb"
+                href="http://www.facebook.com/#!/profile.php?id=1611040837"
+                target="_blank"
+                >fb</a
+              >
+            </li>
+            <li>
+              <a
+                class="ama"
+                href="http://www.amazon.com/Rising-Tide-Lynn-Steigleder/dp/1606960156/ref=ntt_at_ep_dpi_1"
+                target="_blank"
+                >ama</a
+              >
+            </li>
+            <li>
+              <a
+                class="twit"
+                href="https://twitter.com/#!/LynnSteigleder"
+                target="_blank"
+                >&gt;twit</a
+              >
+            </li>
+            <li>
+              <a class="email" href="mailto:lynnsteigleder@lynnsteigleder.com"
+                >mail</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
-<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
-<body>
-<header>
-<div id="wrap">
-<hgroup id="logo">
-	<h1><a href="index.html">Lynn Steigleder</a></h1>
+    <div id="wrap">
+      <h1 class="welcome">Welcome to the website of author Lynn Steigleder!</h1>
 
-	<h2><a href="index.html">Author</a></h2>
+      <div class="books-book">
 
-	<h3><a href="index.html">sci-fi + fantasy + action adventure</a></h3>
-</hgroup>
+      <div
+        id="line"
+        style="
+          width: 100%;
+          margin-top: 30px;
+          margin-right: 0;
+          margin-left: 0;
+          margin-bottom: 0;
+        "
+      ></div>
+      &nbsp;
 
-<nav>
-<ul>
-	<li><a href="contact.html">Contact</a></li>
-	<li><a href="http://authorrisingtide.wordpress.com/" target="_blank">Blog</a></li>
-	<li><a href="news.html">News</a></li>
-	<li><a href="books.html">Books</a></li>
-	<li><a href="about.html">The Author</a></li>
-</ul>
-</nav>
-<!-- <a href="message.html" style="color:#e4a03a; position:absolute; font-size:14px; top:40px; right:0; ">Click here to read a personal message from Lynn</>a -->
+      <div class="books-book">
+        <div class="book-image"><img src="img/papa_and_ed.jpg" /></div>
 
-<div id="social">
-<ul>
-	<li><a class="fb" href="http://www.facebook.com/#!/profile.php?id=1611040837" target="_blank">fb</a></li>
-	<li><a class="ama" href="http://www.amazon.com/Rising-Tide-Lynn-Steigleder/dp/1606960156/ref=ntt_at_ep_dpi_1" target="_blank">ama</a></li>
-	<li><a class="twit" href="https://twitter.com/#!/LynnSteigleder" target="_blank">&gt;twit</a></li>
-	<li><a class="email" href="mailto:lynnsteigleder@lynnsteigleder.com">mail</a></li>
-</ul>
-</div>
-</div>
-</header>
+        <div class="book-desc">
+          <h2>PaPa 'N Lil' Ed
+		</h2>
+          <h4 style="font-size: 1.4em; margin: 0 0 0.5em 0"> Hardcover - Coming July 15, 2024!</h4>
 
-<div id="wrap">
-<h1 class="welcome">Welcome to the website of author Lynn Steigleder!</h1>
+          <p style="margin: 0 0.4em 0 0">
+            Soaring on the Wings of Faith with PaPa and Lil' Ed
+            <br />
+            <br />
+            Say hi to Lil' Ed, a colorful caterpillar with yellow and black
+            stripes, who doesn't understand why grown-ups think greens taste
+            good-they're so yucky!
+            <br />
+            <br />
 
-<div class="books-book">
-<div class="book-image"><img src="img/dalon-con-large.png" /></div>
+            Then he meets PaPa, a kind granddaddy long legs spider with lots and
+            lots of wisdom. Together, they go on amazing adventures up high,
+            watching the world turn from green to brilliant colors like orange
+            and red.
+            <br />
+            <br />
+            An just like the leaves, Lil' Ed starts to change too, wrapping
+            himself up in a cozy little bundle.
+            <br />
+            <br />
+            "PaPa 'N Lil' Ed" is a fun story about growing up, discovering new
+            things, and finding out how special God's plans for us are.
+          </p>
 
-<div class="book-desc">
-<h4 style="font-size: 1.4em; margin: 0 0 0.5em 0">Announcing:</h4>
+          <div class="amazon">
+            <p>
+				<a target="_blank" href="https://www.amazon.com/dp/1945146575?crid=38PPWFPYU8P7O">
+					<button class="button-29" >Pre-order on Amazon</button>
+				</a>
+			</p>
+          </div>
+        </div>
+      </div>
+      <div id="line" style="width:100%; margin-right:0; margin-left:0; margin-bottom: 4em"></div>
+      <div class="books-book">
+        <div class="book-image">
+            <img src="img/dalon_con.jpg" />
+        </div>
+        <div class="book-desc">
+            <h2>Dalon Con</h2>
+            <h5 style="font-weight: 800;">A looming darkness is engulfing the universe and time is running out.</h5>
+            <br>
+            <p>
+                Darkness engulfs the universe as time ticks perilously close to extinction. A group of renegade Odobi scientists defy the law to reinstate time travel, venturing into the past to unravel the mysteries of the now-extinct planet Burrus Plax—ground zero of the looming devastation. As Hayden breaches the time portal, a sinister shadow emerges, distorting the very truths he seeks to safeguard their future.
+                
+                Meanwhile, Dalon Con, a divine emissary, joins forces with Gabriel, a youth scarred by a violent past, on a crucial mission to save Burrus Plax. Together, they combat the dark forces of Hag, the puppet master whose evil infiltrates every crevice of the dying world. As they plunge deeper into danger, every victory summons a new foe. Time itself becomes a battlefield, as Temporal thieves warp the continuum, threatening universal chaos.
+            </p>
+            <br>
+            <h5 style="font-weight: 800; line-height: 1.5;">Will they triumph over the encroaching storm, or is the universe doomed to fall into an eternal abyss of chaos?
+            </h5>
 
-<h2>Dalon Con: The Annihilation Through Time</h2>
-
-<h4 style="font-size: 1.4em; margin: 0 0 0.5em 0">Coming Soon</h4>
-</div>
-</div>
-
-<p class="welcome-message">Read about Lynn&#39;s work here: <a href="books.html">Books</a></p>
-
-<div id="line" style="width:100%; margin-top:30px; margin-right:0; margin-left:0; margin-bottom:0;"></div>
-&nbsp;
-
-<div class="books-book">
-<div class="book-image"><img src="img/deadly-reign.png" /></div>
-
-<div class="book-desc">
-<h2>Deadly Reign</h2>
-
-<h4 style="font-size: 1.4em; margin: 0 0 0.5em 0">Available Now!</h4>
-
-<p style="margin: 0 0.4em 0 0">Ben, Eve and Pete continue to push through this new Earth as the world sinks deeper into corruption. They gain new allies, including an intellectual animal equipped with the gift of speech. They are forced to battle six aberrations (beasts and riders) deemed nearly indestructible. The environment has manifested into a frigid terrain with the sun lost in the ice filled cloud cover. Swords forged especially for the riders by the riders offer another layer of defense to an already superior force. The humans have deduced that water may possibly be a weapon, but a weapon that even now is freezing at an accelerated rate.</p>
-
-<div class="amazon">
-<p><a href="http://christophermatthewspub.com/product/deadly-reign-paperback/" target="_blank">Get Deadly Reign now</a></p>
-</div>
-</div>
-</div>
-
-<div class="sign-up">
-<h2>Sign up for Lynn&#39;s newsletter here:</h2>
-
-<p>Enter your email address and name (optional) for updates, book giveaways, short stories and information about new novel releases!</p>
-<!-- Begin MailChimp Signup Form -->
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-    <form action="https://lynnsteigleder.us21.list-manage.com/subscribe/post?u=37d67eb970c9bfe07113371a0&amp;id=98d4473f46&amp;f_id=001859e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <h2>Subscribe</h2>
-        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
-	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-</div>
-	<div id="mce-responses" class="clear foot">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_37d67eb970c9bfe07113371a0_98d4473f46" tabindex="-1" value=""></div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                <p class="brandingLogo"><a href="http://eepurl.com/itaUG2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+            <div class="amazon">
+                <p>
+                    <a target="_blank" href="https://www.amazon.com/Dalon-Essence-Time-Lynn-Steigleder-ebook/dp/B0D3GMS77M">
+                        <button class="button-29" >Pre-order on Amazon</button>
+                    </a>
+                </p>
             </div>
         </div>
+        <div class="clear"></div>
     </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-<!--End mc_embed_signup--></div>
+    </div>
+	<footer>
+        <div id="wrap">
+          <section id="footer">
+            <img src="img/lynn-small.jpg" />
+            <section id="about-lead">
+              <h2>About the Author</h2>
 
-<footer>
-<div id="wrap">
-<section id="footer"><img src="img/lynn-small.jpg" />
-<section id="about-lead">
-<h2>About the Author</h2>
+            <h1>Lynn Steigleder - 7/24/59 — 4/9/24</h1>
 
-<h1>Lynn Steigleder</h1>
+              <p>
+                Lynn Steigleder was born in Richmond, Virginia. Lynn had written short stories
+                off...
+              </p>
 
-<p>The idea to begin writing actually surfaced from a comment made by his son during a fishing trip. Lynn had written short stories off...</p>
+              <p class="read-more"><a href="about.html">Read More</a></p>
+            </section>
 
-<p class="read-more"><a href="about.html">Read More</a></p>
-</section>
+            <section id="review">
+              <h1>What others are saying</h1>
 
-<section id="review">
-<h1>What others are saying</h1>
+              <p>
+                &quot;Fantastic! Join Ben in his exciting journey discovering
+                that without evil good cannot exist. You won&#39;t be
+                disappointed.&quot;
+              </p>
 
-<p>&quot;Fantastic! Join Ben in his exciting journey discovering that without evil good cannot exist. You won&#39;t be disappointed.&quot;</p>
+              <p class="name">- Ronnie Hale</p>
+            </section>
+          </section>
+        </div>
+      </footer>
 
-<p class="name">- Ronnie Hale</p>
-</section>
-</section>
-</div>
-</footer>
-</div>
 </body>
 </html>
