--- a/news.html
+++ b/news.html
@@ -62,67 +62,18 @@ $('footer').next('div').remove();
         </div>
         </div>
 	</header>
-
-
-
-
 <div id="wrap">
 <br />
-
-<div class="sign-up">
-
-
-    <h2>Sign up for Lynn's newsletter here:</h2>
-    <p>Enter your email address and name (optional) for updates, book giveaways, short stories and information about new novel releases!</p>
-
-        <!-- Begin MailChimp Signup Form -->
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-    <form action="https://lynnsteigleder.us21.list-manage.com/subscribe/post?u=37d67eb970c9bfe07113371a0&amp;id=98d4473f46&amp;f_id=001859e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <h2>Subscribe</h2>
-        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
-	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-</div>
-	<div id="mce-responses" class="clear foot">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_37d67eb970c9bfe07113371a0_98d4473f46" tabindex="-1" value=""></div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                <p class="brandingLogo"><a href="http://eepurl.com/itaUG2" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
-            </div>
-        </div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-
-    <!--End mc_embed_signup-->
-</div>
 <br />
-<br />
-<br />
-
-
-
-
     <section role="content" id="about">
     <h1>In the News</h1>
         <div id="about">
+            <article>  
+                <h2>Lynn Steigleder — 7/24/59  —  4/9/24</h2>
+                <p style="line-height: 1.5;">Lynn Kevin Steigleder went to claim his new, heavenly body on April 9, 2024. He is preceded in death by his father, Alfred “Buddy” Steigleder, mother Evelyn Holladay, stepfather Benjamin Holliday, uncle and lifelong friend Larry Wayne Johnson, and many others who experienced first-hand Lynn’s generosity, love, and good humor.</p>
+                <a href="https://authorrisingtide.wordpress.com/" target="_blank">READ MORE</a>
+            </article>
+
 
             <article>
             <h2>Eden's Wake acccepted by publisher Christoper Mathews</h2>
